--- a/frontend/src/pages/userprofile/userprofile.css
+++ b/frontend/src/pages/userprofile/userprofile.css
@@ -1,7 +1,7 @@
 .profile-card {
-  max-width: 500px;
+  width: 310px;
   margin: 2rem auto;
-  padding: 2rem;
+  padding: 1rem ;
   background: #1e1e2f;
   color: #f0f0f0;
   border-radius: 12px;
@@ -39,7 +39,8 @@
 }
 
 .pic-actions input {
-  margin: 0.5rem 0;
+  margin: 0.5rem 0,5rem 0,5rem 0,5rem;
+  padding-right: 0,5rem;
 }
 
 .pic-actions button {
@@ -59,7 +60,7 @@
 .profile-form input,
 .profile-form select,
 .profile-form textarea {
-  width: 100%;
+  width: 90%;
   padding: 0.5rem;
   border-radius: 6px;
   border: none;
