--- a/frontend/src/pages/userprofile/userprofile.css
+++ b/frontend/src/pages/userprofile/userprofile.css
@@ -112,7 +112,7 @@
 
 .gamename{
   font-weight: bold;
-  font-size: large;
+  font-size: x-large;
 }
 
 .gamedata{
@@ -148,3 +148,13 @@
   margin-top: 9%;
 }
 
+.ageInputs{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5%;
+}
+
+.distance{
+  width: 50%;
+}
