--- a/frontend/src/components/navbar/navbar.css
+++ b/frontend/src/components/navbar/navbar.css
@@ -29,3 +29,41 @@
 .navbar button:hover {
   background-color: #555;
 }
+
+.user-dropdown {
+  position: relative;
+  cursor: pointer;
+  display: flex;
+  gap: 15%;
+}
+
+.user-info {
+  display: flex;
+  align-items: center;
+}
+
+.dropdown-menu {
+  position: absolute;
+  top: 40px;
+  right: 0;
+  background: white;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  width: 150px;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  z-index: 100;
+}
+
+.dropdown-item {
+  padding: 10px;
+  cursor: pointer;
+}
+
+.dropdown-item:hover {
+  background-color: #f0f0f0;
+}
+
+.icon{
+  height: 30px;
+  cursor: pointer;
+}
