Added audit fields to user profile save fn.
Former-commit-id: 45576b8fd40d4f56360ae4a271f6358f20a94c00 [formerly 3d4d61a47bc1f78efe2583a958ca8c174b37491d] [formerly 733044fea8b5ce28da08f2f55cc3185d4bcd1f01 [formerly 688f193d6109c46ebeb07dda6396e95c0f78c69c]]
Former-commit-id: 733044fea8b5ce28da08f2f55cc3185d4bcd1f01
Former-commit-id: 57abd170cde78c3764ef56c862fc4633fcd24bb2

--- a/frontend/src/pages/userprofile/userprofile.css
+++ b/frontend/src/pages/userprofile/userprofile.css
@@ -2,7 +2,7 @@
   width: 310px;
   margin: 2rem auto;
   padding: 1rem ;
-  background: #1e1e2f;
+  background: #7c857c;
   color: #f0f0f0;
   border-radius: 12px;
   box-shadow: 0 4px 12px rgba(0,0,0,0.4);
@@ -138,6 +138,7 @@
 .selected{
   font-size: 12px;
   border: 1px solid rgb(255, 0, 0); 
+  background: #44446a;;
   border-radius: 5px;
   padding: 1%;
   cursor: pointer;
