Added location db as csv file. Tested search api. If user is typing their location ,it searches most common cities around the world and add lat + long to profile db.
Former-commit-id: 342394a11d3fbeaf46d65af77d550bee4563fbf6 [formerly a67c24fdba52b0f99e444968fb48e5e9bd70ea0c] [formerly 4f2c934a80dbffef28bdaa44455f7d5d24e4b44d [formerly cb81c69931e12ca1f1614559c7062c1a370f5b43]]
Former-commit-id: 4f2c934a80dbffef28bdaa44455f7d5d24e4b44d
Former-commit-id: 27ff78c2361591c052efdb70e8b3cb75176da7bf

--- a/frontend/src/components/userProfile/gamecomponents.css
+++ b/frontend/src/components/userProfile/gamecomponents.css
@@ -14,3 +14,33 @@
   padding: 1%;
   cursor: pointer;
 }
+
+.results-list {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  color: black;
+  width: 100%;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0px 0px 8px rgba(0,0,0,0.2);
+  border-radius: 10px;
+  margin-top: 0.5rem;
+  max-height: 300px;
+  overflow-y: auto;
+  z-index: 1000;
+}
+
+.results-list div {
+  padding: 0.5rem;
+  cursor: pointer;
+}
+
+.results-list div:hover {
+  background-color: #f0f0f0;
+}
+.autocomplete-wrapper {
+  position: relative;
+  width: 100%;
+}
